--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "diff": "^4.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-diff": "^0.0.7",
+    "react-diff-viewer": "^1.1.0",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-speech-recognition": "^2.0.1"
